# qt_clion_run_project

./: .gitignore  CMakeLists.txt  README.md  qt_clion_run_project.pro
